Conclusao do cadastro da tabela de Disciplina x Professor (Leciona)

--- a/gestaoEscolar/templates/gestaoEscolar/turma/gerenciamento_turma_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/turma/gerenciamento_turma_listagem.html
@@ -16,7 +16,7 @@
             </tr>
             <a href="#">Matricular um aluno</a>
             &NonBreakingSpace;
-            <a href="{% url 'leciona_listagem' id %}">Matriz Curricular</a>
+            <a href="{% url 'leciona_listagem' id %}">Disciplina x Professor</a>
         </thead>
         <tbody>
             <!-- {% for turma in turmas %}
