--- a/gestaoEscolar/templates/gestaoEscolar/leciona/leciona_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/leciona/leciona_listagem.html
@@ -11,8 +11,8 @@
         <thead>
             <tr>
                 <th>Alt</th>
-                <th>Professor</th>
                 <th>Disciplina</th>
+                <th>Professor</th>
                 <th>Aulas previstas</th>
             </tr>
         </thead>
@@ -24,8 +24,8 @@
 
                         {% if lecionas is not None and disciplina.id == leciona.Matriz_Item.Disciplina.id %}
                             <tr>
-                                <th><a href="#">X</a></th>
-                                <th><a href="#">{{ leciona.Matriz_Item.Disciplina.Nome }}</a></th>
+                                <th><a href="{% url 'leciona_alterar' idT leciona.id %}">X</a></th>
+                                <th><a href="{% url 'leciona_consultar' idT leciona.id %}">{{ leciona.Matriz_Item.Disciplina.Nome }}</a></th>
                                 <th>{{ leciona.Professor.Nome }}</th>
                                 {% if leciona.Aulas_Previstas is not None %}
                                     <th>{{ leciona.Aulas_Previstas }}</th>
@@ -48,5 +48,5 @@
             {% endfor %}
         </tbody>
     </table>
-
+    <a href="{% url 'gerenciamento_turma_listagem' idT %}"> Voltar</a>
 {% endblock  %}
