Criando a filtragem da listagem das aulas por turmas usando AJAX

--- a/gestaoEscolar/templates/gestaoEscolar/leciona/leciona_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/leciona/leciona_form.html
@@ -41,7 +41,7 @@
         {% if Tipo_Transacao == 'UPD' %}
             <fieldset>
                 <div>
-                    <label for="id_Aulas_Previstas">Aulas_Previstas:</label>
+                    <label for="id_Aulas_Previstas">Aulas previstas:</label>
                     <input type="number" name="Aulas_Previstas" min="0" required id="id_Aulas_Previstas" value='{{ leciona_dados.Aulas_Previstas }}'>
                 </div>
 
