Criando a listagem de Avaliacoes e alterando a listagem das aulas para filtra-las quando for um professor as acessando

--- a/gestaoEscolar/templates/gestaoEscolar/turma/gerenciamento_turma_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/turma/gerenciamento_turma_listagem.html
@@ -22,7 +22,7 @@
             {% endif%}
             <a href="{% url 'leciona_listagem' idT %}">Disciplina x Professor</a>
             &NonBreakingSpace;
-            <a href="% url 'leciona_listagem' idT %">Avaliações</a>
+            <a href="{% url 'avaliacao_listagem' idT %}">Avaliações</a>
         </thead>
         <tbody>
             {% for matricula in matriculas %}
