--- a/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_listagem.html
@@ -18,7 +18,7 @@
                 <th>Disciplina</th>
             </tr>
             {% if turma.AnoLetivo.Situacao == 'A' %}
-                <a href="% url 'avaliacao_novo' turma.id %">Novo</a>
+                <a href="{% url 'avaliacao_novo' turma.id %}">Novo</a>
             {% endif%}
             
         </thead>
